# wan-api

./: .gitignore  Makefile  README.md  app.py  inference.ipynb  pyproject.toml
