[project]
name = "wan-api"
version = "0.1.0"
description = "Providing APIs for accessing self-hosting Wan model."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "diffusers>=0.33.1",
    "fastapi>=0.115.12",
    "ftfy>=6.3.1",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "pydantic>=2.11.3",
    "torch>=2.6.0",
    "transformers>=4.51.2",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "I", # isort
    "E", # pycodestyle error
    "W", # pycodestyle warning
    "F", # Pyflakes
    "B", # flake8-bugbear
]
