[project]
name = "wan-api"
version = "0.1.0"
description = "Providing APIs for accessing self-hosting Wan model."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffsynth>=1.1.7",
    "fastapi>=0.115.12",
    "pydantic>=2.11.3",
    "torch>=2.6.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "I", # isort
    "E", # pycodestyle error
    "W", # pycodestyle warning
    "F", # Pyflakes
    "B", # flake8-bugbear
]
